update use a way much efficient delete function, also way simpler